add xrandr config

--- a/config.org
+++ b/config.org
@@ -122,3 +122,8 @@ myKeys =
          , (action, mask) <- [ (W.view, "") , (W.shift, "S-")]
     ]
 #+END_SRC
+** xarand
+#+BEGIN_SRC conf :tangle ~/.screenlayout/arandr.sh
+#!/bin/sh
+xrandr --output DisplayPort-1 --mode 3840x2160 --pos 0x0 --rotate left --output DisplayPort-0 --mode 3840x2160 --pos 6000x0 --rotate left --output DisplayPort-2 --primary --mode 3840x2160 --pos 2160x1520 --rotate normal --output DVI-D-0 --off --output HDMI-A-0 --off
+#+END_SRC
