--- a/config.org
+++ b/config.org
@@ -1,4 +1,5 @@
 #+TITLE: config
+
 ** Meta
      If you place the following code into your emacs init when saving the
      ~/.dotfiles.org file the dotfiles will all be exported.
@@ -93,14 +94,19 @@ some useful posts:
 - https://github.com/rime/home/wiki/UserGuide#%E5%90%8C%E6%AD%A5%E7%94%A8%E6%88%B6%E8%B3%87%E6%96%99
 - https://manateelazycat.github.io/emacs/2019/09/12/make-rime-works-with-linux.html
 
-#+BEGIN_SRC conf :tangle ~/.emacs.d/rime/default.custom.yaml
+#+BEGIN_SRC conf :tangle ~/.emacs.d/rime/default.custom.yaml :mkdirp yes
 patch:
   menu:
     page_size: 100
   schema_list:
     - schema: luna_pinyin_simp
 #+END_SRC
-** xmoad
+*** arch/manjaro
+fcitx-im fcitx-configtool fcitx-rime is necessary to use rime in pyim somehow.
+#+BEGIN_SRC
+sudo pacman -S fcitx-im fcitx-configtool fcitx-rime librime
+#+END_SRC
+** xmonad
 #+BEGIN_SRC conf :tangle ~/.xmonad/xmonad.hs
 import qualified XMonad.StackSet as W
 import XMonad.Actions.UpdateFocus
@@ -129,7 +135,7 @@ myKeys =
     ]
 #+END_SRC
 ** xarand
-#+BEGIN_SRC conf :tangle ~/.screenlayout/arandr.sh
+#+BEGIN_SRC conf :tangle ~/.screenlayout/arandr.sh :mkdirp yes
 #!/bin/sh
 xrandr --output DisplayPort-1 --mode 3840x2160 --pos 0x0 --rotate left --output DisplayPort-0 --mode 3840x2160 --pos 6000x0 --rotate left --output DisplayPort-2 --primary --mode 3840x2160 --pos 2160x1520 --rotate normal --output DVI-D-0 --off --output HDMI-A-0 --off
 #+END_SRC
