modify manjaro dep

--- a/config.org
+++ b/config.org
@@ -17,7 +17,13 @@
      #+END_SRC
 
     
-    
+
+** presuite
+*** arch
+#+BEGIN_SRC
+pacman -S aspell-en
+sudo pacman -S fcitx-im fcitx-configtool fcitx-rime librime
+#+END_SRC
 ** bashrc
 #+BEGIN_SRC conf :tangle ~/.bashrc
 #+END_SRC
@@ -104,7 +110,6 @@ patch:
 *** arch/manjaro
 fcitx-im fcitx-configtool fcitx-rime is necessary to use rime in pyim somehow.
 #+BEGIN_SRC
-sudo pacman -S fcitx-im fcitx-configtool fcitx-rime librime
 #+END_SRC
 ** xmonad
 #+BEGIN_SRC conf :tangle ~/.xmonad/xmonad.hs
