--- a/README.org
+++ b/README.org
@@ -174,6 +174,40 @@ MimeType=x-scheme-handler/org-protocol;
 update-desktop-database ~/.local/share/applications/
 #+END_SRC
 ** eaf
+*** How to debug eaf inside doom
+doom may have some conflicitions with eaf, but it provides sandbox, which can
+give u a pure emacs:
+#+BEGIN_SRC elisp
+;; Welcome to the sandbox!
+;;
+;; This is a test bed for running Emacs Lisp in another instance of Emacs that
+;; has varying amounts of Doom loaded:
+;;
+;; - vanilla Emacs (nothing loaded)         C-c C-c
+;; - vanilla Doom (only Doom core)          C-c C-d
+;; - Doom + modules - your private config   C-c C-p
+;; - Doom + modules + your private config   C-c C-f
+;;
+;; This is done without sacrificing access to installed packages. Use the sandbox
+;; to reproduce bugs and determine if Doom is to blame.
+
+(require 'use-package)
+(use-package eaf
+  :load-path "~/projects/github/emacs-application-framework"
+  :custom
+  (eaf-find-alternate-file-in-dired t)
+  :config
+  (setq eaf-proxy-type "socks5")
+  (setq eaf-proxy-host "127.0.0.1")
+  (setq eaf-proxy-port "1092")
+  (eaf-bind-key scroll_up "RET" eaf-pdf-viewer-keybinding)
+  (eaf-bind-key scroll_down_page "DEL" eaf-pdf-viewer-keybinding)
+  (eaf-bind-key scroll_up "C-n" eaf-pdf-viewer-keybinding)
+  (eaf-bind-key scroll_down "C-p" eaf-pdf-viewer-keybinding)
+  (eaf-bind-key take_photo "p" eaf-camera-keybinding))
+#+END_SRC
+
+then <kbd>C-c C-c</kbd>
 *** ssh: connect to host localhost port 22: Connection refused
 #+BEGIN_SRC
 systemctl enable sshd --now
