encrypt my ssh config

--- a/README.org
+++ b/README.org
@@ -221,3 +221,26 @@ when watching bilibili, it tells me that i lack flash plugin. This package fix i
 #+BEGIN_SRC
 pepper-flash
 #+END_SRC
+** ssh :crypt:
+-----BEGIN PGP MESSAGE-----
+
+jA0EBwMCy9G0O34D4Xr10ukBJOLZ2++OXM/iulJMNrk/CeQhDmqVxbMEBv88SRP/
+/aSZVGXufoh0rrFyaqS2O12q1Dl0Ups5C3JQUFsR42VO/b2Gz7FgJIsT+UAzd0YE
+VLQjoiVWQdHs1kpW9PkJ6+Y3yi0CzQmHp8ECDLUBnVtKLPIP97GTRY7YbkVQYzVL
+k8vGBAk3/cfJRB4Exaa8Z8/X7p/kg8n3r17RjcUWSCMPCDkbkGOmCqWfj9y+/vaJ
+aOpwBO4iKk/Rhz39mRqVIoC1yheIjmXZsugVs18Nd445iUyA7OtFiKPzHzDrDwlL
+jM1KRgH6/tafvhWp41bIxkiB1u/i83/ziIjJcBd4I/1uHJVuVf3Q60Vna+DUMpdh
+ZwQM5D17oXDSBuB0KVgrjhDQbdq/yzGx2Fs1gZUyL8G/UYX34maPPsC7526jwvkT
+eGkcl5Cv6EYyiudsLWojNS+aCsSbZoCBjCzlSNbUFyr6oRRbhQq7vAtiOBu4iz9Z
+nU1pyNvH6oJ6TydOjURm148oBGO7h5jUIYpQNp0w0uJDZFmcciPR8TBrRFyjhB1F
+VSyZjuolx49Qfyd88ILNKjh53yjhVrCY5L5D3UzXrHGyo7KyutSdL+nAQRhiKm4F
+lY5kc9+M2td2+VYxv2WL8y2wrUJLzykjKZr9Z/k3oKwO6OYKApBMjgByVw99Eg6n
+o8Blzj7AgAXZ5Q3DUwKvapiFwhFmvZb4nUcMgDrSfSYfQWW/q661zGRdYgXoWcRb
+DsPQrzPjsS8F9GnVa/FPtt+VoNHNl1WIDjaZth2++X2fJtyYeWX0SFteKR6c6Lxa
+KG/W4r6LDlfAPRoHkLMbk2ni343l9Y3Lh5MSHHc951Ctfuhlmo5T4lguinLa/JPL
+dz8KPn7D/vzNaBoyMRY9FTAZJQ7/kk3sMiKS8TVCw327ZUado0srj5ctljHvSE/e
+wB714fMgsdlFLJAZ4vYttiNMGzzBSN1sbiEnT1X85YYn7WFUd3YjdK9Fwb8kKkQ/
+tbd2jzwAyRK0VAfv3aLOO6hKSUwONs1ZuRlF2wxcxA+qKBolXQ3FwCSNmAeNEBvS
+kR9iolF4waM=
+=Vd6r
+-----END PGP MESSAGE-----
