--- a/README.org
+++ b/README.org
@@ -38,7 +38,7 @@ set -g history-limit 100000
 ** gitconfig
 #+BEGIN_SRC conf :tangle ~/.gitconfig
 [user]
-    name = chenli
+    name = Chen Li
     email = chenli@uniontech.com
     username = chenli
 [core]
