--- a/config.org
+++ b/config.org
@@ -179,3 +179,8 @@ font = Sarasa Term J 30
 background = rgba(63, 63, 63, 0.8)
 
 #+END_SRC
+** cargo
+#+BEGIN_SRC :tangle ~/.cargo/config :mkdirp yes
+[registry]
+index = "git://mirrors.ustc.edu.cn/crates.io-index"
+#+END_SRC
