mkdirp for xmonad

--- a/config.org
+++ b/config.org
@@ -117,7 +117,7 @@ fcitx-im fcitx-configtool fcitx-rime is necessary to use rime in pyim somehow.
 #+BEGIN_SRC
 #+END_SRC
 ** xmonad
-#+BEGIN_SRC conf :tangle ~/.xmonad/xmonad.hs
+#+BEGIN_SRC conf :tangle ~/.xmonad/xmonad.hs :mkdirp yes
 import qualified XMonad.StackSet as W
 import XMonad.Actions.UpdateFocus
 import XMonad.Util.EZConfig
