--- a/config.org
+++ b/config.org
@@ -33,19 +33,23 @@ sudo pacman -S fcitx-im fcitx-configtool fcitx-rime librime
 set-option -g default-shell /usr/bin/xonsh
 #+END_SRC
 ** gitconfig
+#+BEGIN_SRC
+firstlove@manjaro ~/projects/github/linux master $ tail /etc/privoxy/config  -n1
+forward-socks5 / 127.0.0.1:1092 .
+#+END_SRC
 #+BEGIN_SRC conf :tangle ~/.gitconfig
 [user]
 	name = chenli
-	email = czxyl@protonmail.com
+	email = chenli@uniontech.com
 	username = chenli
 [core]
 	editor = emacs
 	whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 	excludesfile = ~/.gitignore
 [http]
-    proxy = socks5://127.0.0.1:1092
+    proxy = http://127.0.0.1:8118
 [https]
-    proxy = socks5://127.0.0.1:1092
+    proxy = http://127.0.0.1:8118
 #+END_SRC
 ** gitignore
 #+BEGIN_SRC conf :tangle ~/.gitignore
