--- a/config.org
+++ b/config.org
@@ -100,7 +100,7 @@ Thumbs.db
 #+BEGIN_SRC python :tangle ~/.xonshrc
 aliases["p"]='proxychains'
 $PATH.append('~/.emacs.d/bin')
-$PROMPT = '{BOLD_GREEN}{user}@{hostname} {GREEN}[{cwd}]\n{BLUE}-> {BOLD_BLUE}%{NO_COLOR} '
+$PROMPT = '{BOLD_GREEN}{user} {YELLOW}[{cwd}]\n{BLUE}-> {BOLD_BLUE}%{NO_COLOR} '
 # $CMAKE_GENERATOR = "Ninja"
 $EDITOR = 'emacs'
 $XONSH_STORE_STDOUT = True
@@ -227,4 +227,13 @@ opacity-rule = [
 use_proxy=on
 http_proxy=127.0.0.1:8118
 https_proxy=127.0.0.1:8118
+#+END_SRC
+** redshift
+#+BEGIN_SRC conf :tangle  ~/.config/redshift/redshift.conf :mkdirp yes
+ [redshift]
+ location-provider=manual
+
+ [manual]
+ lat=48.853
+ lon=2.349
 #+END_SRC
