--- a/config.org
+++ b/config.org
@@ -26,6 +26,7 @@ sudo pacman -S fcitx-im fcitx-configtool fcitx-rime librime privoxy aspell-en v2
 ** bashrc
 #+BEGIN_SRC conf :tangle ~/.bashrc
 export CMAKE_EXPORT_COMPILE_COMMANDS=1
+PATH=$PATH:~/.emacs.d/bin:~/.local/bin
 #+END_SRC
 
 ** tmux
@@ -304,6 +305,7 @@ Thumbs.db
 #+BEGIN_SRC python :tangle ~/.xonshrc
 aliases["p"]='proxychains'
 $PATH.append('~/.emacs.d/bin')
+$PATH.append('~/.local/bin')
 $PROMPT = '{BOLD_GREEN}{user} {YELLOW}[{cwd}]\n{BLUE}-> {BOLD_BLUE}%{NO_COLOR} '
 $CMAKE_GENERATOR = "Unix Makefiles"
 $EDITOR = 'emacs'
