--- a/config.org
+++ b/config.org
@@ -286,7 +286,7 @@ forward-socks5 / 127.0.0.1:1092 .
 
 # Logs #
 ######################
-,*.log
+# *.log
 
 # OS generated files #
 ######################
@@ -301,7 +301,7 @@ Thumbs.db
 .ccls-cache/
 
 # c/cpp
-*.out
+,*.out
 #+END_SRC
 ** xonsh
 #+BEGIN_SRC python :tangle ~/.xonshrc
@@ -315,6 +315,7 @@ $EDITOR = 'emacs'
 $XONSH_STORE_STDOUT = True
 $CMAKE_EXPORT_COMPILE_COMMANDS=1
 $BROWSER = 'chromium'
+$LANG="en_US.UTF-8"
 #+END_SRC
 ** rime
 some useful posts:
@@ -371,7 +372,7 @@ myKeys =
     ]
     ++
     [ (mask ++ "M-" ++ [key], screenWorkspace scr >>= flip whenJust (windows . action))
-         | (key, scr)  <- zip "weruio" [1,2,0,2,0,1] -- was [0..] *** change to match your screen order ***
+         | (key, scr)  <- zip "weruio" [1,2,0,1,2,3] -- was [0..] *** change to match your screen order ***
          , (action, mask) <- [ (W.view, "") , (W.shift, "S-")]
     ]
 #+END_SRC
@@ -553,5 +554,3 @@ Cabal < 1.24
 #+END_SRC
 
 但是替换仓库就行了，不需要全覆盖，所以不 tangle 了
-
-
