--- a/config.org
+++ b/config.org
@@ -316,6 +316,8 @@ $XONSH_STORE_STDOUT = True
 $CMAKE_EXPORT_COMPILE_COMMANDS=1
 $BROWSER = 'chromium'
 $LANG="en_US.UTF-8"
+$http_proxy="http://127.0.0.1:8118/"
+$https_proxy="https://127.0.0.1:8118/"
 #+END_SRC
 ** rime
 some useful posts:
@@ -554,3 +556,4 @@ Cabal < 1.24
 #+END_SRC
 
 但是替换仓库就行了，不需要全覆盖，所以不 tangle 了
+
