--- a/config.org
+++ b/config.org
@@ -356,7 +356,7 @@ myStartupHook = do
     -- autocutsel
     spawn "unclutter -grab &"
     -- redshift
-    spawn "redshift -l 21:121"
+    spawn "redshift -P -O 2800"
     -- unclutter
     spawn "unclutter"
     -- compositor
@@ -562,4 +562,3 @@ Cabal < 1.24
 #+END_SRC
 
 但是替换仓库就行了，不需要全覆盖，所以不 tangle 了
-
